--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware)
 pkgver=3
-pkgrel=63
+pkgrel=64
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -525,7 +525,7 @@ package_couldinho-sec() {
         python-capstone         # GEF optional dependency
         python-unicorn          # GEF optional dependency
         python-keystone         # GEF optional dependency
-        python-ropper           # GEF optional dependency
+        ropper                  # ROP gadget searching tool
     )
 
     # Cracking
