--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=3
-pkgrel=79
+pkgrel=80
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -625,6 +625,8 @@ package_couldinho-media-server() {
     # Server software
     depends+=(
         jellyfin
+        plex-media-server
+        nginx
     )
 
     # Media downloading software
@@ -633,6 +635,8 @@ package_couldinho-media-server() {
         sonarr
         radarr
         transmission-cli
+        organizr
+        overseerr
     )
 }
 
