--- a/conf/desktop/etc/swaylock/config
+++ b/conf/desktop/etc/swaylock/config
@@ -26,5 +26,5 @@ screenshots
 effect-scale=0.4
 effect-vignette=0.2:0.5
 effect-blur=4x2
-datestr="%a %Y-%m-%d"
-timestr="%H:%M"
+datestr=%a %Y-%m-%d
+timestr=%H:%M
