--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=3
-pkgrel=93
+pkgrel=94
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -637,6 +637,11 @@ package_couldinho-media-server() {
         radarr
         transmission-cli
         organizr-git
+    )
+
+    # Dependencies
+    depends+=(
+        python-orjson           # Faster python json library
     )
 }
 
