--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 pkgbase='couldinho'
 pkgname=(couldinho-base couldinho-desktop couldinho-laptop couldinho-dev couldinho-sec couldinho-vmware couldinho-media-server couldinho-media-client)
 pkgver=3
-pkgrel=95
+pkgrel=96
 pkgdesc="Packages for couldinho systems"
 arch=(x86_64)
 url="https://github.com/kontax/arch-packages"
@@ -251,7 +251,7 @@ package_couldinho-desktop() {
     # hyprland
     depends+=(
         hyprland                # Tiling wayland compositor replacing i3/sway
-        waybar-hyprland         # Sway bar for wayland
+        waybar                  # Sway bar for wayland
         hyprland-autoname-workspaces-git    # Auto-name hyprland workspaces
         swayidle                # Idle management system for sway
         swaylock-effects        # Lock wayland screen with added effects
